devopspro/25Cert-Manager e Lets Encrypt/ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(maferreira94.shop)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
  tls:
    secretName: veronez-net-secret
